--- a/regulatory-aspect-updator/src/main/resources/alfresco/module/regulatory-aspect-updator/alfresco-global.properties
+++ b/regulatory-aspect-updator/src/main/resources/alfresco/module/regulatory-aspect-updator/alfresco-global.properties
@@ -3,3 +3,39 @@
 ## System Administrators can override these values in environment specific configurations in
 ## alfresco/tomcat/shared/classes/alfresco-global.properties.
 ## 
+
+
+# MY POC Properties
+customer.name=MY-POC
+boeing.namespace=http://www.hollymolly.com/model/onepppm/1.0
+boeing.aspect.name=content-extractor
+boeing.writingSet.property=writingSet
+boeing.referencesList.property=referencesList
+boeing.authorityReferences.property=authorityReferences
+boeing.authorityReferencesList.property=authorityReferencesList
+boeing.authorityReferences.section.title=AUTHORITY REFERENCE
+boeing.writing.section.font.name=Arial
+boeing.writing.section.font.size=12.0
+boeing.writing.section.font.bold=true
+boeing.writing.title.font.name=Arial
+boeing.writing.title.font.size=18.0
+boeing.writing.title.font.bold=true
+
+# MY POC - Scheduled Job For Reporting
+org.alfresco.tutorial.scheduledjob.cronexpression=0 0/2 * * * ?
+org.alfresco.tutorial.scheduledjob.cronstartdelay=240000
+org.alfresco.tutorial.scheduledjob.enabled=true
+
+# MY POC - ElasticSearch Reporting
+boeing.reports.alfresco.hostname=https://boeing.alfdemo.com
+boeing.reports.elasticsearch.hostname=https://i-dont-know.us-east-2.aws.elastic-cloud.com
+boeing.reports.elasticsearch.port=443
+boeing.reports.elasticsearch.index=boeing-test-2
+boeing.reports.elasticsearch.authentication.api.value=YkRLSzI1RUI3Nksyb1hTQ2ZVNjg6OWE5SERYTDBSRFdaT2tLLWEzZzY2dw==
+boeing.reports.postgresql.url=jdbc:postgresql://ec2-1-2-3-4.compute-1.amazonaws.com:5432/alfresco
+
+# MY POC - REGULATORY ASPECTS
+boeing.alfresco.hostname=http://ec2-1-2-3-4.compute-1.amazonaws.com
+boeing.regulatory-aspect-list.property=regulatoryAspectsList
+boeing.alfresco.username=demo
+boeing.alfresco.password=demo
